# dhscanner.query.engine

./: .gitignore  Dockerfile  Dockerfile.rel  Main.hs  README.md  dhscanner.cabal  kb.pl  main.py  prog.pl  template.pl  utils.pl
.github/workflows/: build.yaml  main.yml
cves/: cve_2023_37466.txt  cve_2023_45674.txt  cve_2024_30256.txt  cve_2024_32022.txt  cve_2024_33667.txt  cve_2024_42363.txt  cve_2024_7856.txt  ghsa_97m3.txt  ghsl_2024_093.txt
src/: Main.hs
