cabal-version: 3.0
name: dhscanner
version: 0.1.0.0

-- The license under which the package is released.
license: GPL-3.0-only

-- The file containing the license text.
license-file: LICENSE

-- The package author(s).
author: Oren Ish Shalom

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: Oren Ish Shalom

build-type: Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

common ghc_options
    
    ghc-options: -Wall -Werror -O2

executable queryengine

    import: ghc_options

    hs-source-dirs:
        src

    main-is: Main.hs

    build-depends:
        base,
        process,
        containers,
        dhscanner-ast >= 1.1.2,
        dhscanner-bitcode >= 1.0.10,
        dhscanner-kbgen >= 1.0.7,
        yesod-core,
        http-types,
        fast-logger,
        bytestring,
        wai-logger,
        directory,
        wai-extra,
        warp,
        time,
        wai,
        aeson,
        array,
        yesod,
        text,
        mtl

    ghc-options: -Wall -threaded -Werror=missing-fields -O2

    default-language: Haskell2010
